kubernetes/apps/observability/victoriametrics/stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: stack
    app.kubernetes.io/name: vmsingle
  name: vmsingle-stack
spec:
  hostnames:
    - vam.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-stack
          port: 8429
